integrated doctor endpoint and saved doctor when online, saved request when offline

--- a/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.html
+++ b/src/app/pages/setup/containers/setup-doctor/setup-doctor.component.html
@@ -1,6 +1,7 @@
 <app-header [title]="'Setup Doctor'" [backBtnEnabled]="true"></app-header>
 
 <ion-content class="app-inner-padding">
+    {{ isOffline$ | async | json  }}
     <ng-container *ngFor="let doctor of doctors$ | async">
         <app-item-sliding-card
             [itemSlidingProps]="doctor"
