--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -1,21 +1,14 @@
 <ion-header [translucent]="true" no-border no-shadow class="ion-no-border">
-  <ion-toolbar class="title">
-    <ion-buttons slot="start">
-			<!-- <ion-menu-button *ngIf="!backBtnEnabled">
-				<ion-icon class="icon-Menu"></ion-icon>
-			</ion-menu-button> -->
-			<ion-button *ngIf="backBtnEnabled" (click)="goBack()">
-				<!-- <ion-icon size="large" color="primary" name="!backBtnIconClose ? 'chevron-back-outline' : 'close-outline'"></ion-icon> -->
-        <ion-icon name="chevron-back-outline" size="large" color="primary"></ion-icon>
-			</ion-button>
-		</ion-buttons>
-    <ion-title>{{ title }}</ion-title>
-  </ion-toolbar>
-</ion-header>
-<!-- <ion-content [fullscreen]="true" class="ion-padding">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">{{ title }}</ion-title>
+    <ion-toolbar class="title">
+        <ion-buttons slot="start">
+            <ion-button *ngIf="backBtnEnabled" (click)="goBack()">
+                <ion-icon
+                    name="chevron-back-outline"
+                    size="large"
+                    color="primary"
+                ></ion-icon>
+            </ion-button>
+        </ion-buttons>
+        <ion-title>{{ title }}</ion-title>
     </ion-toolbar>
-  </ion-header>
-</ion-content> -->
+</ion-header>
