--- a/src/app/shared/components/header/header.component.html
+++ b/src/app/shared/components/header/header.component.html
@@ -9,6 +9,15 @@
                 ></ion-icon>
             </ion-button>
         </ion-buttons>
+        <ion-buttons slot="end">
+            <ion-button (click)="presentPopover($event)">
+                <ion-icon
+                    name="settings-outline"
+                    size="large"
+                    color="primary"
+                ></ion-icon>
+            </ion-button>
+        </ion-buttons>
         <ion-title>{{ title }}</ion-title>
     </ion-toolbar>
 </ion-header>
