adds go back button on register page

--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -73,5 +73,8 @@
         <ion-button (click)="register()" expand="block"
             >{{'register-page.button' | translate }}</ion-button
         >
+        <ion-button (click)="goBack()" expand="block"
+            >{{'register-page.go-to-login' | translate }}</ion-button
+        >
     </form>
 </ion-content>
