Fixes expression change after check issue

--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.html
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.html
@@ -19,7 +19,14 @@
                         </ion-item>
 
                         <div>
-                            <ion-button (click)="onGoToDoctor(i)">
+                            <!-- {{ dgc.doctorFormGroupControls[i].value?.doctor | json }} -->
+                            <ion-button
+                                [disabled]="
+                                    !dgc.doctorFormGroupControls[i]?.value
+                                        ?.doctor
+                                "
+                                (click)="onGoToDoctor(i)"
+                            >
                                 <ion-icon
                                     name="arrow-forward-outline"
                                 ></ion-icon>
