--- a/src/app/pages/log-work/form/components/date-picker-modal/date-picker-modal.component.scss
+++ b/src/app/pages/log-work/form/components/date-picker-modal/date-picker-modal.component.scss
@@ -1,39 +1,44 @@
 :host {
-	div {
-		color: var(--ion-color-dark-02);
+    div {
+        color: var(--ion-color-dark-02);
+        position: relative;
+        top: 30vh;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+		
+        ion-datetime {
+            button {
+                font-size: 23px;
+            }
 
-		ion-datetime {
-			button {
-				font-size: 23px;
-			}
+            ion-buttons {
+                width: 260px;
+                display: flex;
+                justify-content: space-between;
 
-			ion-buttons {
-				width: 260px;
-				display: flex;
-				justify-content: space-between;
+                ion-button {
+                    display: flex;
+                    font-family: var(--ion-font-family-semibold);
+                    font-size: 14px;
+                    text-transform: capitalize;
+                    color: var(--ion-color-dark-04);
+                    --background: none;
+                    --ripple-color: transparent;
 
-				ion-button {
-					display: flex;
-					font-family: var(--ion-font-family-semibold);
-					font-size: 14px;
-					text-transform: capitalize;
-					color: var(--ion-color-dark-04);
-					--background: none;
-					--ripple-color: transparent;
+                    &.cancel-button {
+                        color: var(--ion-color-primary-tint);
+                    }
 
-					&.cancel-button {
-						color: var(--ion-color-primary-tint);
-					}
-
-					&.save-button {
-						color: var(--ion-color-light-08);
-						--background: var(--ion-color-primary-tint);
-						--border-radius: 22px;
-						width: 120px;
-						height: 50px;
-					}
-				}
-			}
-		}
-	}
+                    &.save-button {
+                        color: var(--ion-color-light-08);
+                        --background: var(--ion-color-primary-tint);
+                        --border-radius: 22px;
+                        width: 120px;
+                        height: 50px;
+                    }
+                }
+            }
+        }
+    }
 }
