adds template for reports and styles a bit the datepicker

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -5,17 +5,18 @@
         <ion-card color="primary" (click)="openLogWork()">
             <ion-card-header>
                 <ion-card-title>Log Work</ion-card-title>
-                <!-- <ion-card-subtitle>Card Subtitle</ion-card-subtitle> -->
             </ion-card-header>
-
-            <!-- <ion-card-content>
-          Log Work
-        </ion-card-content> -->
         </ion-card>
 
         <ion-card color="secondary" (click)="openSetup()">
             <ion-card-header>
                 <ion-card-title>Setup</ion-card-title>
+            </ion-card-header>
+        </ion-card>
+
+        <ion-card color="tertiary" (click)="openReports()">
+            <ion-card-header>
+                <ion-card-title>Reports</ion-card-title>
             </ion-card-header>
         </ion-card>
     </ion-list>
