--- a/src/app/pages/log-work/log-work.component.html
+++ b/src/app/pages/log-work/log-work.component.html
@@ -2,7 +2,7 @@
 
 <ion-content class="app-inner-padding">
     <!-- <ion-item> -->
-    <div>
+    <div class="datetime-wrapper">
         <ion-datetime
             color="rose"
             presentation="date"
