adds structure for reports logic

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,4 +1,4 @@
-<app-header [title]="'Sinziana'"></app-header>
+<app-header [title]="'Work Logging'"></app-header>
 
 <ion-content [fullscreen]="true" class="app-inner-padding">
     <ion-list>
