adds worked hours summary in report

--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -32,6 +32,11 @@
                     }}</ion-note>
                 </ion-item>
             </ion-list>
+            <ion-item>
+                <ion-label>Sumary</ion-label>
+                <ion-label>{{ report.monthlyReports.workedHours }}</ion-label>
+                <ion-note slot="end">Worked Hours</ion-note>
+            </ion-item>
         </ion-card-content>
     </ion-card>
 </ion-content>
