makes breaks rows sliding with delet option

--- a/src/app/pages/log-work/form/containers/doctor/doctor.component.html
+++ b/src/app/pages/log-work/form/containers/doctor/doctor.component.html
@@ -46,7 +46,7 @@
                 </ion-button>
             </ion-grid>
         </ion-item-group>
-        <ion-item-group [formGroup]="dgc.timeGroup">
+        <!-- <ion-item-group [formGroup]="dgc.timeGroup">
             <ion-grid>
                 <ion-row>
                     <ion-col
@@ -69,10 +69,12 @@
                     </ion-col>
                 </ion-row>
             </ion-grid>
-        </ion-item-group>
+        </ion-item-group> -->
         <ion-buttons>
             <ion-button (click)="goToTimeTracking()">
-                Time Tracking
+                <!-- Time Tracking -->
+                <ion-label>Time Tracking</ion-label>
+                <ion-icon name="arrow-forward-outline"> </ion-icon>
             </ion-button>
         </ion-buttons>
     </form>
