--- a/src/app/pages/log-work/form/containers/time-tracking/time-tracking.component.html
+++ b/src/app/pages/log-work/form/containers/time-tracking/time-tracking.component.html
@@ -37,26 +37,32 @@
                         let i = index
                     "
                 >
-                    <ion-col>
-                        <div [formGroupName]="i">
+                    <app-item-sliding-card
+                        [isNgContent]="true"
+                        [itemSlidingProps]="{
+                        id: i,
+                        title: '',
+                        rows: [],
+                    }"
+                    (itemSlidingDelete)="deleteBreak(i)"
+                    >
+                        <ion-col [formGroupName]="i">
                             <app-date-picker
                                 [chosenDate]="chosenDate"
                                 formControlName="startTime"
                                 [form]="dgc.timeGroup"
                                 [label]="'Start Time'"
                             ></app-date-picker>
-                        </div>
-                    </ion-col>
-                    <ion-col>
-                        <div [formGroupName]="i">
+                        </ion-col>
+                        <ion-col [formGroupName]="i">
                             <app-date-picker
                                 [chosenDate]="chosenDate"
                                 formControlName="endTime"
                                 [form]="dgc.timeGroup"
                                 [label]="'End Time'"
                             ></app-date-picker>
-                        </div>
-                    </ion-col>
+                        </ion-col>
+                    </app-item-sliding-card>
                 </ion-row>
 
                 <ion-button (click)="addBreak()">
@@ -64,37 +70,5 @@
                 </ion-button>
             </ion-grid>
         </ion-item-group>
-
-        <!-- <ion-item-group [formGroup]="dgc.timeGroup">
-            <ion-grid formArrayName="breaks">
-                <ion-row
-                    *ngFor="
-                        let breakControl of dgc.timeGroupControls;
-                        let i = index
-                    "
-                >
-                    <ion-col>
-                        <ion-item [formGroupName]="i">
-                            <app-date-picker
-                                [chosenDate]="chosenDate"
-                                formControlName="startTime"
-                                [form]="dgc.timeGroup"
-                                [label]="'Start Time'"
-                            ></app-date-picker>
-                        </ion-item>
-                    </ion-col>
-                    <ion-col>
-                        <ion-item [formGroupName]="i">
-                            <app-date-picker
-                                [chosenDate]="chosenDate"
-                                formControlName="endTime"
-                                [form]="dgc.timeGroup"
-                                [label]="'Start Time'"
-                            ></app-date-picker>
-                        </ion-item>
-                    </ion-col>
-                </ion-row>
-            </ion-grid>
-        </ion-item-group> -->
     </form>
 </div>
