--- a/src/app/pages/log-work/swiper/swiper.component.html
+++ b/src/app/pages/log-work/swiper/swiper.component.html
@@ -13,6 +13,7 @@
         pagination="true"
         (slidechange)="onSlideChange()"
         effect="coverflow"
+        threshold="100"
     >
         <ng-container *ngIf="this.multiForm | async as form">
             <swiper-slide>
