--- a/src/app/shared/components/item-sliding-card/item-sliding-card.component.scss
+++ b/src/app/shared/components/item-sliding-card/item-sliding-card.component.scss
@@ -5,10 +5,19 @@
         border-radius: 15px;
         cursor: pointer;
 
+        &.ngContent{
+            margin-bottom: 3px;
+        }
+
         ion-item {
             --inner-padding-end: 0px;
             border-radius: 15px;
             box-shadow: 8px 15px 20px 4px var(--ion-color-shadow01);
+
+            &.ngContent {
+                border-radius: 15px;
+                box-shadow: 0px 2px 10px 1px var(--ion-color-shadow01);
+            }
 
             ion-card {
                 width: 100%;
@@ -17,6 +26,10 @@
 
                 ion-card-content {
                     padding: 20px;
+
+                    &.ngContent {
+                        display: flex;
+                    }
 
                     ion-card-title {
                         margin-bottom: 20px;
