--- a/src/app/pages/reports/reports.component.html
+++ b/src/app/pages/reports/reports.component.html
@@ -9,34 +9,64 @@
         <ion-card-header>
             <ion-card-title>{{ report.monthlyReports.month }} </ion-card-title>
         </ion-card-header>
+
         <ion-card-content>
-            <ion-list>
-                <ion-item>
-                    <ion-label>Sumary</ion-label>
-                    <ion-label>{{
-                        report.monthlyReports.totalPrice
-                    }}</ion-label>
-                    <ion-note slot="end">{{
-                        report.monthlyReports.numberOfElements
-                    }}</ion-note>
-                </ion-item>
-            </ion-list>
-            <ion-list>
-                <ion-item
+            <ion-grid>
+                <ion-row>
+                    <ion-col>
+                        <ion-label></ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>Amount</ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>No of items</ion-label>
+                    </ion-col>
+                </ion-row>
+
+                <ion-row>
+                    <ion-col>
+                        <ion-label>Worked Hours</ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>{{
+                            report.monthlyReports.workedHours
+                        }}</ion-label>
+                    </ion-col>
+                    <ion-col> </ion-col>
+                </ion-row>
+
+                <ion-row>
+                    <ion-col>
+                        <ion-label>Earnings</ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>{{
+                            report.monthlyReports.totalPrice
+                        }}</ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>{{
+                            report.monthlyReports.numberOfElements
+                        }}</ion-label>
+                    </ion-col>
+                </ion-row>
+                <ion-row
                     *ngFor="let workItem of report.monthlyReports.workItem"
                 >
-                    <ion-label>{{ workItem.name }}</ion-label>
-                    <ion-label>{{ workItem.totalPriceOfElements }}</ion-label>
-                    <ion-note slot="end">{{
-                        workItem.numberOfElements
-                    }}</ion-note>
-                </ion-item>
-            </ion-list>
-            <ion-item>
-                <ion-label>Sumary</ion-label>
-                <ion-label>{{ report.monthlyReports.workedHours }}</ion-label>
-                <ion-note slot="end">Worked Hours</ion-note>
-            </ion-item>
+                    <ion-col>
+                        <ion-label>{{ workItem.name }}</ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>{{
+                            workItem.totalPriceOfElements
+                        }}</ion-label>
+                    </ion-col>
+                    <ion-col>
+                        <ion-label>{{ workItem.numberOfElements }}</ion-label>
+                    </ion-col>
+                </ion-row>
+            </ion-grid>
         </ion-card-content>
     </ion-card>
 </ion-content>
