--- a/src/global.scss
+++ b/src/global.scss
@@ -105,7 +105,8 @@ swiper-slide {
     justify-content: center;
 
     width: 100%;
-    height: 100%;
+    height: 65vh;
+    // height: 100%;
 
     font-size: 18px;
 
