adds close button in modals; fixes some styling; prevent click default

--- a/src/app/pages/log-work/form/components/date-picker/date-picker.component.html
+++ b/src/app/pages/log-work/form/components/date-picker/date-picker.component.html
@@ -1,7 +1,7 @@
 <ion-input
     readonly
     [value]="displayDate"
-    (click)="openModal()"
+    (click)="openModal(); $event.preventDefault()"
     label=""
     labelPlacement="floating"
 >
