--- a/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
+++ b/src/app/pages/log-work/form/components/searcheable-select-input/searcheable-select-input.component.html
@@ -1,6 +1,6 @@
 <ion-input
     [readonly]="true"
-    (click)="onOpenSelect()"
+    (click)="onOpenSelect(); $event.preventDefault()"
     [label]="inputLabel[strategy]"
     labelPlacement="floating"
     readonly
