--- a/src/app/pages/log-work/log-work.component.scss
+++ b/src/app/pages/log-work/log-work.component.scss
@@ -8,7 +8,7 @@
         content: "";
         width: 100%;
         background-color: var(--ion-color-background);
-        height: 10vh;
+        height: 130px;
         border-radius: 0 0 30px 30px;
     }
     ion-content {
