--- a/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.scss
+++ b/src/app/pages/setup/containers/setup-work-item/add-edit-work-item/add-edit-work-item.component.scss
@@ -1,15 +1,36 @@
 :host {
-    &::after {
-        position: absolute;
-        top: 0;
-        right: 0;
-        left: 0;
-        bottom: auto;
-        content: "";
-        width: 100%;
-        background-color: var(--ion-color-background);
-        height: 10vh;
-        border-radius: 0 0 30px 30px;
+    // &::after {
+    //     position: absolute;
+    //     top: 0;
+    //     right: 0;
+    //     left: 0;
+    //     bottom: auto;
+    //     content: "";
+    //     width: 100%;
+    //     background-color: var(--ion-color-background);
+    //     height: 10vh;
+    //     border-radius: 0 0 30px 30px;
+    // }
+    ion-header {
+        // transparent background
+        --background: transparent;
+        ion-toolbar {
+            --background: transparent;
+
+            ion-buttons {
+                ion-button,
+                ion-menu-button {
+                    --color: var(--ion-color-dark-06);
+                    --background: transparent;
+                    margin-inline-start: 0;
+                    margin-inline-end: 0;
+                    ion-icon {
+                        --color: var(--ion-color-dark-06);
+                        font-size: 28px;
+                    }
+                }
+            }
+        }
     }
     ion-content {
         overflow-y: auto;
